nova_tests/plan114/neg/plan114_4_4_loop_iterations_exceeded_neg.nv
// Plan 114.4.4 Ф.3 NEG: infinite loop → MAX_LOOP_ITERATIONS exceeded.

// EXPECT_COMPILE_ERROR E_CONST_FN_EVAL_ITERATIONS_EXCEEDED

module neg.plan114_4_4_loop_iterations_exceeded_neg

fn forever() -> const int {
    mut i = 0
    loop {
        i = i + 1
    }
    i
}

const BAD = forever()
